[tool.poetry]
name = "pytaku"
version = "0.6.3"
description = "Self-hostable web-based manga reader"
authors = ["Bùi Thành Nhân <hi@imnhan.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [
    { include = "pytaku", from = "src" },
    { include = "mangoapi", from = "src" },
]
# Compiled js bundle dir is in gitignore, which poetry also reads.
# Therefore, it needs to be specifically whitelisted here:
include = ["src/pytaku/static/js/*"]

[tool.poetry.scripts]
pytaku = "pytaku:serve"
pytaku-dev = "pytaku:dev"
pytaku-migrate = "pytaku:migrate"
pytaku-generate-config = "pytaku:generate_config"
pytaku-scheduler = "pytaku:scheduler"
pytaku-collect-static = "pytaku:collect_static"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2"
gunicorn = "^20"
requests = "^2"
goodconf = "^1"
argon2-cffi = "^21"
bbcode = "^1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
